--- a/courses.html
+++ b/courses.html
@@ -306,6 +306,100 @@
                 <li>Minimum of 60% for Physcial Sciences</li>
             </ul>
             <br>
+            <ul>
+                <b><u>Additional Requirements:</u></b>
+                <li>
+                    <b><u>Questionnaire:</u></b>
+                    <br>
+                    The questionnaire will ask a series of questions.
+                    Some of these are about you as an applicant and some of them pertain to the kinds of work we do at
+                    Wits
+                    Digital Arts.
+                    <br>
+                    <br>
+                    <ul>
+                        You will be assessed based on your ability to:
+                        <li>Problem-Solve</li>
+                        <li>Engage Critically</li>
+                    </ul>
+                    <br>
+                    <ul>
+                        You <b><u>must</u></b> submit the following with your questionnaire:
+                        <li>
+                            <b>1-page CV</b>, detailing your personal information - particularly your:
+                            <ul>
+                                <li> Full Name</li>
+                                <li>Address</li>
+                                <li>Telephone or cellphone contact information</li>
+                                <li>Email contact information</li>
+                                <li>Name of the last school you attende</li>
+                                <li> Year of matriculation (or expected matriculation).</li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>
+                            <b>Copy of your ID</b>
+                        </li>
+                        <br>
+                        <li>
+                            A <b>transcript of your most recent marks</b>. This being a <b><u>certified copy</b></u> of
+                            your:
+                            <ul>
+                                <li>Final Grade 11 mark</li>
+                                <li>Matric Certificate</li>
+                                <li>Academic transcript</li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>
+                            <b>A Critical Essay (1-2 pages)</b>
+                            <br>
+                            In a short essay (1-2 pages) discuss a game, animation or
+                            interactive media
+                            (digital or analogue) that you have recently engaged with. Your
+                            essay should
+                            not be a description. It should critically engage with how the
+                            artwork
+                            works, the themes and the effect that this has on the
+                            user/player/audience.
+                            You should be able to describe what you liked or did not like. You
+                            should
+                            identify one to two aspects of the artwork that you found most or
+                            least
+                            effective and discuss why that is.
+                        </li>
+                        <br>
+                        <li>
+                            <b>A Portfolio of Work</b>
+                            <br>
+                            This portfolio can be on any creative work that you have completed.
+                            You are
+                            free to submit drawings, animations, games, photography, creative
+                            writing or
+                            any work that you have done. This is a moment for you to show off
+                            your
+                            abilities and talents. Feel free to submit whatever you feel
+                            highlights you
+                            best.
+                        </li>
+                    </ul>
+                </li>
+                <br>
+                <br>
+                Questionnaires will be first issued in May 2021. We will continue to
+                issue to new
+                applicants every two weeks until November. The final deadline for
+                the questionnaire
+                is 19th November 2021.
+                <br>
+                <br>
+                If you have not received a questionnaire 3 weeks after your
+                application, please
+                contact Liezel Borman (Liezel.Borman@wits.ac.za) to request that it
+                is resent to
+                you.
+            </ul>
+            <br>
             <p>
                 <b><u>Wait-listing</u></b>
                 <br>
