--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="">OUR ALUMNI</a></li>
+                    <li><a href="alumni.html">OUR ALUMNI</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -102,15 +102,15 @@
 
             <div class="courses-colm">
                 <a href="courses.html#post-degree">
-                    < <h3>
+                    <h3>
                         Post-Graduate
-                        </h3>
-                        <p>
-                            <br>
-                            Wits Digital Arts has a fantastic range of postgraduate study opportunities, starting with
-                            our
-                            Honours Degree and continuing into Master’s Degrees and even PhD offerings.
-                        </p>
+                    </h3>
+                    <p>
+                        <br>
+                        Wits Digital Arts has a fantastic range of postgraduate study opportunities, starting with
+                        our
+                        Honours Degree and continuing into Master’s Degrees and even PhD offerings.
+                    </p>
                 </a>
             </div>
 
