--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="alumni.html">NEWS</a></li>
+                    <li><a href="">OUR ALUMNI</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -77,6 +77,7 @@
                 </p>
 
                 <a href="courses.html#courses" class="main-btn other-btn">What We Offer</a>
+
             </div>
             <div class="about-colm">
                 <img src="Images/uriel-soberanes-MxVkWPiJALs-unsplash.jpg"
