better fucking wqork

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+-
 <!DOCTYPE html>
 <html>
 
@@ -37,53 +38,88 @@
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
                     <li><a href="alumni.html">NEWS</a></li>
-                    <li><a href="contact.html">CONTACT US</a></li>
+                    <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="menuShow()"></i>
         </nav>
 
         <h1>
-            About Us
+            Contact Us
         </h1>
     </section>
 
-    <!--About Content-->
-    <section class="about-us">
+    <!--Contact Content-->
+    <section class="location">
+        <center>
+
+            <h2>
+                Where to Find Us
+            </h2>
+        </center>
+        <br>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14320.515962231393!2d28.0324692!3d-26.1924819!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x128029e7d124e5bf!2sWSOA%20Digital%20Arts%20Division!5e0!3m2!1sen!2sza!4v1637145662234!5m2!1sen!2sza"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
+    <section class="contact-us">
         <div class="row">
-            <div class="about-colm">
-                <h1>
-                    What We Do
-                </h1>
+            <div class="contact-colm">
+                <h2>
+                    Our Details
+                </h2>
+                <br>
+                <div>
+                    <i class="fa fa-home"></i>
+                    <span>
+                        <h5>
+                            WSOA Digital Arts Division, Station Street
+                        </h5>
+                        <p>
+                            Braamfontein, Johannesburg, ZA
+                        </p>
+                    </span>
+                </div>
 
-                <p>
-                    At the Digital Arts Department, we focus on producing graduates with a deep understanding of the
-                    theories and practice of Technology Arts.
-                    <br>
-                    <br>
-                    Our three key areas of interest are: Animation, Game
-                    Design and Interactive Media. Our students leave with diverse skill sets: technically,
-                    theoretically, and
-                    artistically. These elements are addressed holistically throughout our programs. Our focus is on
-                    producing students that demonstrate adaptability and critical understanding in professional
-                    arenas:
-                    as independent artists, entrepreneurs, as well as in the more formalized workforce.
-                    <br>
-                    <br>
-                    Digital technologies are driving factors in economic and cultural development throughout
-                    Africa, and for our graduates to enter this space they have to be both technically and
-                    critically
-                    equipped to work within this challenging environment.
-                </p>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <span>
+                        <h5>
+                            +27 (11) 717 4656
+                        </h5>
+                        <p>
+                            WSOA Student Liason Officer
+                        </p>
+                    </span>
+                </div>
 
-                <a href="courses.html#courses" class="main-btn other-btn">What We Offer</a>
-
+                <div>
+                    <i class="fa fa-envelope-o"></i>
+                    <span>
+                        <h5>
+                            info.digitalarts@wits.ac.za
+                        </h5>
+                        <p>
+                            Email us directly for any queries
+                        </p>
+                    </span>
+                </div>
             </div>
-            <div class="about-colm">
-                <img src="Images/uriel-soberanes-MxVkWPiJALs-unsplash.jpg"
-                    alt="A man with a VR headset on loooks up in awe. He is a skinny white boy with a longsleeve top on. The top has a large overfilled burger with eyes on it.">
+
+            <div class="contact-colm">
+                <h2>
+                    Email Us Now
+                </h2>
+                <br>
+                <form action="">
+                    <input type="text" placeholder="Name" required>
+                    <input type="email" placeholder="Email Address" required>
+                    <input type="text" placeholder="Subject" required>
+                    <textarea rows="8" placeholder="Type Your Query Here..." required></textarea>
+                    <button type="submit" class="main-btn other-btn">Send</button>
+                </form>
             </div>
-        </div>
     </section>
 
     <!--Footer-->
@@ -91,7 +127,7 @@
         <h4>
             Social Media
         </h4>
-        <p>
+        <p>Contact
             Follow us on our Social Media and stay informed about the latest at the Digital Arts Department
         </p>
         <div class="social-icons">
