--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="style.css">
 
     <!--google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,700;1,600&display=swap"
         rel="stylesheet">
@@ -29,14 +28,14 @@
     <section class="header">
         <nav>
             <a href="index.html"><img src="Images/digital-arts-logo.png"
-                    alt="Wits Digital Arts Logo. A blue line shaped into a squre is interrupted in the bottom right corner by the words, The Wits School of Arts."></a>
+                    alt="Wits Digital Arts Logo. A blue line shaped into a sqaure is interrupted in the bottom right corner by the words, The Wits School of Arts."></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="menuHide()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="alumni.html">OUR ALUMNI</a></li>
+                    <li><a href="alumni.html">NEWS</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -70,47 +69,59 @@
 
             <div class="courses-colm">
                 <a href="courses.html#ba-degree">
-                    <h3>
-                        BA Digital Arts
-                    </h3>
-                    <p>
-                        The BA in Digital Arts is a 4 Year Professional Degree that allows you to tailor your
-                        specialisation, and also gives you a useful, broad skillset. The combination of artistic,
-                        technical
-                        and critical skills equips you to be an innovator, practical problem-solver, as well as a
-                        critical
-                        thinker and artist.
-                    </p>
+                    <img src="/Images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg">
+                    <div class="layer">
+                        <h3>
+                            BA Digital Arts
+                        </h3>
+                        <p>
+                            The BA in Digital Arts is a 4 Year Professional Degree that allows you to tailor your
+                            specialisation, and also gives you a useful, broad skillset. The combination of artistic,
+                            technical
+                            and critical skills equips you to be an innovator, practical problem-solver, as well as a
+                            critical
+                            thinker and artist.
+                        </p>
+                    </div>
                 </a>
             </div>
 
 
             <div class="courses-colm">
                 <a href="courses.html#beng-degree">
-                    <h3>
-                        BEngSc Digital Arts
-                    </h3>
-                    <p>
-                        The BEngSc in Digital Arts is a combination of information engineering and
-                        creative production gives you a broad range of critical and technical skills. This equips you to
-                        enter the technology sector with an unique perspective: blending software development, systems
-                        thinking, and creative application.
-                    </p>
+                    <img src="/Images/linkedin-sales-solutions-EI50ZDA-l8Y-unsplash.jpg">
+                    <div class="layer">
+                        <h3>
+                            BEngSc Digital Arts
+                        </h3>
+                        <p>
+                            The BEngSc in Digital Arts is a combination of information engineering and
+                            creative production gives you a broad range of critical and technical skills. This equips
+                            you to
+                            enter the technology sector with an unique perspective: blending software development,
+                            systems
+                            thinking, and creative application.
+                        </p>
+                    </div>
+
                 </a>
             </div>
 
 
             <div class="courses-colm">
                 <a href="courses.html#post-degree">
-                    <h3>
-                        Post-Graduate
-                    </h3>
-                    <p>
-                        <br>
-                        Wits Digital Arts has a fantastic range of postgraduate study opportunities, starting with
-                        our
-                        Honours Degree and continuing into Master’s Degrees and even PhD offerings.
-                    </p>
+                    <img src="/Images/lagos-techie-IgUR1iX0mqM-unsplash.jpg">
+                    <div class="layer">
+                        <h3>
+                            Post-Graduate
+                        </h3>
+                        <p>
+                            Wits Digital Arts has a fantastic range of postgraduate study opportunities, starting with
+                            our
+                            Honours Degree and continuing into Master’s Degrees and even PhD offerings.
+
+                        </p>
+                    </div>
                 </a>
             </div>
 
