--- a/alumni.html
+++ b/alumni.html
@@ -36,8 +36,8 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="">OUR ALUMNI</a></li>
-                    <li><a href="">CONTACT US</a></li>
+                    <li><a href="alumni.html">NEWS</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="menuShow()"></i>
