--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
                     <li><a href="alumni.html">NEWS</a></li>
-                    <li><a href="">CONTACT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="menuShow()"></i>
