--- a/alumni.html
+++ b/alumni.html
@@ -49,7 +49,7 @@
 
     </section>
 
-    <!--Alumni Content-->
+    <!--Alumni Content
     <section class="alumni-content">
         <div class="row">
             <div class="left-blog">
@@ -116,10 +116,10 @@
                             <a href="" class="main-btn">Read More</a>
                         </div>
                     </div>
-                </section>-->
+                </section>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!--Footer-->
     <footer class="footer">
