--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
             </div>
 
             <div class="contact-colm">
-                <h2>
+                <h2 id="form1">
                     Email Us Now
                 </h2>
                 <br>
