--- a/courses.html
+++ b/courses.html
@@ -271,6 +271,7 @@
             <br>
             <center>
                 <a href="https://www.wits.ac.za/undergraduate/apply-to-wits/" class="main-btn other-btn">Apply Now</a>
+                <a href="#courses" class="main-btn other-btn"> Our Courses</a>
             </center>
             <br>
             <br>
@@ -422,6 +423,7 @@
             <br>
             <center>
                 <a href="https://www.wits.ac.za/undergraduate/apply-to-wits/" class="main-btn other-btn">Apply Now</a>
+                <a href="#courses" class="main-btn other-btn"> Our Courses</a>
             </center>
             <br>
             <br>
@@ -529,6 +531,13 @@
                 institutions, Digital Arts staff are able to assess MA research in a variety of fields that fall in
                 the above-mentioned categories.
             </p>
+            <br>
+            <center>
+                <a href="contact.html#form1" class="main-btn other-btn">Contact Us</a>
+                <a href="#courses" class="main-btn other-btn"> Our Courses</a>
+            </center>
+            <br>
+            <br>
         </div>
     </section>
 
