--- a/courses.html
+++ b/courses.html
@@ -535,6 +535,8 @@
             <center>
                 <a href="contact.html#form1" class="main-btn other-btn">Contact Us</a>
                 <a href="#courses" class="main-btn other-btn"> Our Courses</a>
+                <a href="" class="main-btn other-btn">FAQ</a>
+
             </center>
             <br>
             <br>
