--- a/courses.html
+++ b/courses.html
@@ -272,6 +272,7 @@
             <center>
                 <a href="https://www.wits.ac.za/undergraduate/apply-to-wits/" class="main-btn other-btn">Apply Now</a>
                 <a href="#courses" class="main-btn other-btn"> Our Courses</a>
+                <a href="Images/DigArtsFAQ.pdf" class="main-btn other-btn">FAQ</a>
             </center>
             <br>
             <br>
@@ -424,6 +425,7 @@
             <center>
                 <a href="https://www.wits.ac.za/undergraduate/apply-to-wits/" class="main-btn other-btn">Apply Now</a>
                 <a href="#courses" class="main-btn other-btn"> Our Courses</a>
+                <a href="Images/DigArtsFAQ.pdf" class="main-btn other-btn">FAQ</a>
             </center>
             <br>
             <br>
@@ -535,7 +537,7 @@
             <center>
                 <a href="contact.html#form1" class="main-btn other-btn">Contact Us</a>
                 <a href="#courses" class="main-btn other-btn"> Our Courses</a>
-                <a href="" class="main-btn other-btn">FAQ</a>
+                <a href="Images/DigArtsFAQ.pdf" class="main-btn other-btn">FAQ</a>
 
             </center>
             <br>
