--- a/contact.html
+++ b/contact.html
@@ -49,19 +49,6 @@
     </section>
 
     <!--Contact Content-->
-    <section class="location">
-        <center>
-
-            <h2>
-                Where to Find Us
-            </h2>
-        </center>
-        <br>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14320.515962231393!2d28.0324692!3d-26.1924819!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x128029e7d124e5bf!2sWSOA%20Digital%20Arts%20Division!5e0!3m2!1sen!2sza!4v1637145662234!5m2!1sen!2sza"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-
     <section class="contact-us">
         <div class="row">
             <div class="contact-colm">
@@ -71,14 +58,15 @@
                 <br>
                 <div>
                     <i class="fa fa-home"></i>
-                    <span>
-                        <h5>
-                            WSOA Digital Arts Division, Station Street
-                        </h5>
-                        <p>
-                            Braamfontein, Johannesburg, ZA
-                        </p>
-                    </span>
+                    <a href="#location">
+                        <span>
+                            <h5>
+                                WSOA Digital Arts Division, Station Street
+                            </h5>
+                            <p>
+                                Braamfontein, Johannesburg, ZA
+                            </p>
+                        </span></a>
                 </div>
 
                 <div>
@@ -119,6 +107,18 @@
                     <button type="submit" class="main-btn other-btn">Send</button>
                 </form>
             </div>
+    </section>
+
+    <section class="location" id="location">
+        <center>
+            <h2>
+                Where to Find Us
+            </h2>
+        </center>
+        <br>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14320.515962231393!2d28.0324692!3d-26.1924819!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x128029e7d124e5bf!2sWSOA%20Digital%20Arts%20Division!5e0!3m2!1sen!2sza!4v1637145662234!5m2!1sen!2sza"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <!--Footer-->
