--- a/index.html
+++ b/index.html
@@ -50,8 +50,23 @@
                 Let us help you develop a diverse skill set and prepare you to conquer the edge for your future in the
                 Digital Space.
             </p>
-            <a href="index.html#courses" class="main-btn">Find Out More</a>
+            <a href="index.html#news-video" class="main-btn">Find Out More</a>
         </div>
+    </section>
+
+    <!--Study GD-->
+    <section class="news-video" id="news-video">
+        <center>
+            <h1>
+                Study Game Design at Wits
+            </h1>
+        </center>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nV1VXCyoZX4" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
     </section>
 
     <!--Courses-->
@@ -181,7 +196,7 @@
             <br>
             Work with what you love
         </h1>
-        <a href="" class="main-btn">Contact Us</a>
+        <a href="contact.html" class="main-btn">Contact Us</a>
 
     </section>
 
