--- a/alumni.html
+++ b/alumni.html
@@ -44,82 +44,67 @@
         </nav>
 
         <h1>
-            Our Alumni
+            News
         </h1>
 
     </section>
 
-    <!--Alumni Content
-    <section class="alumni-content">
+    <!--News Content-->
+    <section class="news-content">
         <div class="row">
-            <div class="left-blog">
-                <img src="Images/joshua-hoehne-iggWDxHTAUQ-unsplash.jpg">
+            <div class="news-colm">
+                <img src="/Images/digitalhc.jpg">
+            </div>
+            <div class="news-colm">
                 <h2>
-                    Our Alumni
+                    Our Digital Homecoming!
                 </h2>
                 <p>
-                    Here at Wits Digital Arts, our students are our priority. Our Alumni are the result of our holistic
-                    outlook on education, preparation and skill-development.
-                    They have joined us at different stages, from different paths of life, and with different
-                    goals, passions and mindsets. Here, we honor and celebrate a few of them and their achievements in
-                    their respective industries - and showcase to you, just what diverse paths you can achieve with the
-                    help of Wits Digital Arts, as you pursue your passions and create your goals.
+                    Every year, the Digital Arts Department hosts an exhibition in honour of our soon-to-be
+                    graduates,
+                    who
+                    can showcase their long term work and interact with local industry professionals!
+                    <br>
+                    <br>
+                    This year, the theme of our exhibition, is "Digital Homecoming". This symbolises both the move
+                    into
+                    our
+                    own on-campus facilities, and a chance for our students to touch base with us after a long
+                    battle
+                    with
+                    the pandemic and the turmoil it has presented them.
+                    <br>
+                    <br>
+                    The above poster was design by one of our very own students, and captures the nature of
+                    this
+                    year's
+                    theme to a tee!
+                    <br>
+                    <br>
+                    When: 09:00 - 16-00 on the 11th December 2021
+                    <br>
+                    Where: Wits Digital Arts Building - Entrance through Station Street
                 </p>
-            </div>
-
-            <div class="right-blog">
-                <section class="students">
-                    <h1>
-                        Our Students
-                    </h1>
-                    <p>
-                        Digital Arts produces graduates with a deep understanding of the theories and practice of
-                        Technology Arts.
-                        Our focus is on producing students that demonstrate adaptability and critical understanding in
-                        professional
-                        arenas: as independent artists, entrepreneurs, as well as in the more formalized workforce.
-                    </p>
-
-                    <div class="student-row">
-                        <div class="students-colm">
-                            <img src="Images/emmanuel.jpg">
-                            <h3>
-                                Our Alumni: Emmanuel Sarfo-Boansi
-                            </h3>
-                            <p>
-                                MA in Digital Animation by coursework, 2013
-                                Kwabena works professionally as an animation artist in Cape Town, associated with
-                                Triggerfish as they continue to embark on more high profile projects, as well other
-                                studios in
-                                the city. He constantly strives to grow his skills and put them to the test on animated
-                                content
-                                of the highest caliber.
-                            </p>
-                            <br>
-                            <a href="" class="main-btn">Read More</a>
-                        </div>
-                        <div class="students-colm">
-                            <img src="Images/pippa.jpg">
-                            <h3>
-                                Our Alumni: Pippa Tshabalala
-                            </h3>
-                            <p>
-                                Masters in Fine Arts (Digital Animation)
-                                She has worked full-time in the television industry since 2010, moving from producing
-                                content
-                                for The Verge and a variety of other shows. She has also written for a variety of
-                                publications
-                                and websites such as NAG Magazine, Techsmart and Gearburn as well as running her own
-                                online
-                                magazine, Spliced, of which she was the Editor between 2013-2015.
-                            </p>
-                            <a href="" class="main-btn">Read More</a>
-                        </div>
-                    </div>
-                </section>
+                <a href="contact.html#location" class="main-btn other-btn">Find Us</a>
             </div>
         </div>
-    </section>-->
+
+    </section>
+    <section class="news-video" id="news-video">
+        <center>
+            <h2>
+                Study Game Design at Wits
+            </h2>
+        </center>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nV1VXCyoZX4" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </section>
+
+
 
     <!--Footer-->
     <footer class="footer">
