--- a/alumni.html
+++ b/alumni.html
@@ -56,9 +56,9 @@
                 <img src="/Images/digitalhc.jpg">
             </div>
             <div class="news-colm">
-                <h2>
+                <h1>
                     Our Digital Homecoming!
-                </h2>
+                </h1>
                 <p>
                     Every year, the Digital Arts Department hosts an exhibition in honour of our soon-to-be
                     graduates,
@@ -81,11 +81,16 @@
                     theme to a tee!
                     <br>
                     <br>
-                    When: 09:00 - 16-00 on the 11th December 2021
+                    With the onset of the new omnicron variant, we are doing everything possible to make sure outr
+                    students get the exhibition they deserve. With h=this being said, we have decided to postpone our
+                    event.
                     <br>
-                    Where: Wits Digital Arts Building - Entrance through Station Street
+                    <br>
+                    To stay updated, feel free to follow us on Twitter, Facebook and Instagram, using our social
+                    links at
+                    the bottom of the page!
                 </p>
-                <a href="contact.html#location" class="main-btn other-btn">Find Us</a>
+
             </div>
         </div>
 
