--- a/alumni.html
+++ b/alumni.html
@@ -23,8 +23,6 @@
 </head>
 
 <body>
-
-
     <!--Header-->
     <section class="sub-header">
         <nav>
@@ -90,26 +88,32 @@
                     links at
                     the bottom of the page!
                 </p>
-
             </div>
         </div>
-
     </section>
     <section class="news-video" id="news-video">
         <center>
             <h2>
                 Study Game Design at Wits
             </h2>
+
+            <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nV1VXCyoZX4"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+            <p>
+                The video above is a perfect summary of what happens here at Wits Digital Arts!
+                <br>
+                <br>
+                Our students and staff in video explain a bit about what we offer, as well as the opportunities provded
+                by
+                our degrees. If you feel we have missed anything that you would like to know, feel free to contact us!
+            </p>
+            <a href="contact.html" class="main-btn other-btn">Contact Us</a>
         </center>
-        <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nV1VXCyoZX4" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
     </section>
-
-
 
     <!--Footer-->
     <footer class="footer">
