--- a/about.html
+++ b/about.html
@@ -86,6 +86,10 @@
         </div>
     </section>
 
+    <section class="people">
+
+    </section>
+
     <!--Footer-->
     <footer class="footer">
         <h4>
