--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,9 @@
                     <i class="fa fa-envelope-o"></i>
                     <span>
                         <h5>
-                            info.digitalarts@wits.ac.za
+                            <a href="mailto:info.digitalarts@wits.ac.za">
+                                info.digitalarts@wits.ac.za
+                            </a>
                         </h5>
                         <p>
                             Email us directly for any queries
