--- a/about.html
+++ b/about.html
@@ -87,230 +87,223 @@
     </section>
 
     <section class="people">
-        <center>
-            <h1>
-                Our People
-            </h1>
-            <row>
-                <ul class="our-staff">
-                    <li>
-                        <p>
-                            <span style="font-size: 20px;">
-                                <a href="/staff/academic-a-z-listing/c/stephencloete1witsacza/">
-                                    <strong>
-                                        Mr Stephen
-                                        <!--  Stephen --> Cloete
-                                    </strong>
-                                </a>
-                            </span>
-                            <br>
-                            <strong>
-                                Position:
-                            </strong>
-                            LECTURER
-                            <br>
-                            <strong>
-                                Email:
-                            </strong>
-                            <a href="mailto:stephen.cloete1@wits.ac.za">
-                                stephen.cloete1@wits.ac.za
+        <h1>
+            Our People
+        </h1>
+        <row>
+            <ul class="our-staff">
+                <li>
+                    <p>
+                        <span>
+                            <a href="/staff/academic-a-z-listing/c/stephencloete1witsacza/">
+                                <strong>
+                                    Mr Stephen Cloete
+                                </strong>
                             </a>
-                            <br>
+                        </span>
+                        <br>
+                        <strong>
+                            Position:
+                        </strong>
+                        Lecturer
+                        <br>
+                        <strong>
+                            Email:
+                        </strong>
+                        <a href="mailto:stephen.cloete1@wits.ac.za">
+                            stephen.cloete1@wits.ac.za
+                        </a>
+                        <br>
 
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <span style="font-size: 20px;">
-                                <a href="/staff/professional-and-administrative-a-z-listing/d/angusdavidsonwitsacza/">
-                                    <strong>Mr
-                                        Angus
-                                        <!--  Angus --> Davidson
-                                    </strong>
-                                </a>
-                            </span>
-                            <br>
-                            <strong>
-                                Position:
-                            </strong>ICT PROJECT LEADER:vDIGITAL ARTS
-                            <br>
-                            <strong>
-                                Email:
-                            </strong>
-                            <a href="mailto:Angus.Davidson@wits.ac.za">
-                                Angus.Davidson@wits.ac.za
-
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <span>
+                            <a href="/staff/professional-and-administrative-a-z-listing/d/angusdavidsonwitsacza/">
+                                <strong>
+                                    Mr Angus Davidson
+                                </strong>
                             </a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <span style="font-size: 20px;">
-                                <a href="/staff/academic-a-z-listing/f/timothyfluskwitsacza/">
-                                    <strong>Mr Timothy
-                                        <!--  Timothy --> Flusk
-                                    </strong>
-                                </a>
-                            </span>
-                            <br>
-                            <strong>
-                                Position:
-                            </strong>
-                            ASSOCIATE LECTURER
-                            <br>
-                            <strong>
-                                Email:
-                            </strong>
-                            <a href="mailto:Timothy.Flusk@wits.ac.za">
-                                Timothy.Flusk@wits.ac.za
+                        </span>
+                        <br>
+                        <strong>
+                            Position:
+                        </strong>
+                        ICT Project Leader: Digital Arts
+                        <br>
+                        <strong>
+                            Email:
+                        </strong>
+                        <a href="mailto:Angus.Davidson@wits.ac.za">
+                            Angus.Davidson@wits.ac.za
+
+                        </a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <span>
+                            <a href="/staff/academic-a-z-listing/f/timothyfluskwitsacza/">
+                                <strong>
+                                    Mr Timothy Flusk
+                                </strong>
                             </a>
-                            <br>
+                        </span>
+                        <br>
+                        <strong>
+                            Position:
+                        </strong>
+                        Associate Lecturer
+                        <br>
+                        <strong>
+                            Email:
+                        </strong>
+                        <a href="mailto:Timothy.Flusk@wits.ac.za">
+                            Timothy.Flusk@wits.ac.za
+                        </a>
+                        <br>
 
-                        </p>
+                    </p>
 
 
-                    </li>
-                    <li>
-                        <p>
-                            <span style="font-size: 20px;">
-                                <a href="/staff/academic-a-z-listing/g/hanligeyserwitsacza/">
-                                    <strong>
-                                        Mrs Hanli
-                                        <!--  Johanna --> Geyser
-                                    </strong>
-                                </a>
-                            </span>
-                            <br>
-                            <strong>
-                                Position:
-                            </strong>
-                            LECTURER
-                            <br>
-                            <strong>
-                                Email:
-                            </strong>
-                            <a href="mailto:Hanli.Geyser@wits.ac.za">
-                                Hanli.Geyser@wits.ac.za
+                </li>
+                <li>
+                    <p>
+                        <span>
+                            <a href="/staff/academic-a-z-listing/g/hanligeyserwitsacza/">
+                                <strong>
+                                    Mrs Hanli Geyser
+                                </strong>
                             </a>
-                            <br>
-                            <strong>
-                                Research Interests:
-                            </strong>
-                            <span>
-                                Decolonising Programming Education,
-                                Critical Code Studies,
-                                Interactive Narrative, Game Studies
-                            </span>
-                            <br>
-                        </p>
+                        </span>
+                        <br>
+                        <strong>
+                            Position:
+                        </strong>
+                        Lecturer
+                        <br>
+                        <strong>
+                            Email:
+                        </strong>
+                        <a href="mailto:Hanli.Geyser@wits.ac.za">
+                            Hanli.Geyser@wits.ac.za
+                        </a>
+                        <br>
+                        <strong>
+                            Research Interests:
+                        </strong>
+                        <span>
+                            Decolonising Programming Education,
+                            Critical Code Studies,
+                            Interactive Narrative, Game Studies
+                        </span>
+                        <br>
+                    </p>
 
 
-                    </li>
-                    <li>
-                        <p>
-                            <span style="font-size: 20px;">
-                                <a href="/staff/academic-a-z-listing/l/henrikelodewitsacza/">
-                                    <strong>
-                                        Ms Henrike
-                                        <!--  Henrike --> Lode
-                                    </strong>
-                                </a>
-                            </span>
-                            <br>
-                            <strong>
-                                Position:
-                            </strong>
-                            LECTURER
-                            <br>
-                            <strong>
-                                Email:
-                            </strong>
-                            <a href="mailto:henrike.lode@wits.ac.za">
-                                henrike.lode@wits.ac.za
+                </li>
+                <li>
+                    <p>
+                        <span>
+                            <a href="/staff/academic-a-z-listing/l/henrikelodewitsacza/">
+                                <strong>
+                                    Ms Henrike Lode
+                                </strong>
                             </a>
-                            <br>
-                            <strong>
-                                Research Interests:
-                            </strong>
-                            <span>
-                                Serious Games, Educational Games, Persuasive Games
-                            </span>
-                            <br>
-                        </p>
+                        </span>
+                        <br>
+                        <strong>
+                            Position:
+                        </strong>
+                        Lecturer
+                        <br>
+                        <strong>
+                            Email:
+                        </strong>
+                        <a href="mailto:henrike.lode@wits.ac.za">
+                            henrike.lode@wits.ac.za
+                        </a>
+                        <br>
+                        <strong>
+                            Research Interests:
+                        </strong>
+                        <span>
+                            Serious Games, Educational Games, Persuasive Games
+                        </span>
+                        <br>
+                    </p>
 
 
-                    </li>
-                    <li>
+                </li>
+                <li>
 
 
-                        <p><span style="font-size: 20px;">
-                                <a href="/staff/academic-a-z-listing/s/samanthaschoemanwitsacza/">
-                                    <strong>
-                                        Miss Samantha
-                                        <!--  Samantha --> Schoeman
-                                    </strong>
-                                </a>
-                            </span>
-                            <br>
-                            <strong>
-                                Position:
-                            </strong>
-                            ASSOCIATE LECTURER
-                            <br>
-                            <strong>Email:
-                            </strong>
-                            <a href="mailto:samantha.schoeman@wits.ac.za">
-                                samantha.schoeman@wits.ac.za
+                    <p><span>
+                            <a href="/staff/academic-a-z-listing/s/samanthaschoemanwitsacza/">
+                                <strong>
+                                    Miss Samantha Schoeman
+                                </strong>
                             </a>
-                            <br>
-                            <strong>
-                                Research Interests:
-                            </strong>
-                            <span>
-                                Game Development, Animation, Narrative and Interactivity, Visual
-                                Storytelling and Communication
-                            </span>
-                            <br>
-                        </p>
+                        </span>
+                        <br>
+                        <strong>
+                            Position:
+                        </strong>
+                        Associate Lecturer
+                        <br>
+                        <strong>Email:
+                        </strong>
+                        <a href="mailto:samantha.schoeman@wits.ac.za">
+                            samantha.schoeman@wits.ac.za
+                        </a>
+                        <br>
+                        <strong>
+                            Research Interests:
+                        </strong>
+                        <span>
+                            Game Development, Animation, Narrative and Interactivity, Visual
+                            Storytelling and Communication
+                        </span>
+                        <br>
+                    </p>
 
 
-                    </li>
-                    <li>
-                        <p>
-                            <span style="font-size: 20px;">
-                                <a href="/staff/academic-a-z-listing/w/raymondwhitcherwitsacza/">
-                                    <strong>
-                                        Mr Raymond
-                                        <!--  Raymond --> Whitcher
-                                    </strong>
-                                </a>
-                            </span>
-                            <br>
-                            <strong>
-                                Position:
-                            </strong>
-                            LECTURER
-                            <br>
-                            <strong>
-                                Email:
-                            </strong>
-                            <a href="mailto:raymond.whitcher@wits.ac.za">
-                                raymond.whitcher@wits.ac.za</a>
-                            <br>
-                            <strong>Research Interests:
+                </li>
+                <li>
+                    <p>
+                        <span>
+                            <a href="/staff/academic-a-z-listing/w/raymondwhitcherwitsacza/">
+                                <strong>
+                                    Mr Raymond Whitcher
+                                </strong>
+                            </a>
+                        </span>
+                        <br>
+                        <strong>
+                            Position:
+                        </strong>
+                        Lecturer
+                        <br>
+                        <strong>
+                            Email:
+                        </strong>
+                        <a href="mailto:raymond.whitcher@wits.ac.za">
+                            raymond.whitcher@wits.ac.za</a>
+                        <br>
+                        <strong>Research Interests:
 
-                            </strong>
-                            <span>
-                                Comics, Animation, Intermediality, Adaptation
-                            </span>
-                            <br>
-                        </p>
+                        </strong>
+                        <span>
+                            Comics, Animation, Intermediality, Adaptation
+                        </span>
+                        <br>
+                    </p>
 
 
-                    </li>
-                </ul>
-            </row>
-        </center>
+                </li>
+            </ul>
+        </row>
     </section>
 
     <!--Footer-->
