--- a/alumni.html
+++ b/alumni.html
@@ -73,7 +73,7 @@
                     the pandemic and the turmoil it has presented them.
                     <br>
                     <br>
-                    The above poster was design by one of our very own students, and captures the nature of
+                    This poster was design by one of our very own students, and captures the nature of
                     this
                     year's
                     theme to a tee!
@@ -104,7 +104,7 @@
                 allowfullscreen>
             </iframe>
             <p>
-                The video above is a perfect summary of what happens here at Wits Digital Arts!
+                This video is a perfect summary of what happens here at Wits Digital Arts!
                 <br>
                 <br>
                 Our students and staff in video explain a bit about what we offer, as well as the opportunities provded
